update theme question in FAQ

--- a/faq.html
+++ b/faq.html
@@ -71,7 +71,7 @@ If you use Gnome &gt;=2.18, you can use the included gnome multimedia keys plugi
 <br>See <a href="https://wiki.gmusicbrowser.org/doku.php?id=customization:icons">this page</a> for more informations
 </dd>
 <dt><b>How can I customize the appearance of gmusicbrowser ?</b></dt>
-<dd>	You can create a custom layout (see <a href="layout_doc.html">the documentation</a> and <a href="contrib.html">some contributed layouts</a>). You can also use a gtk theme different from the rest of your system by launching gmusicbrowser like that :<code>GTK2_RC_FILES=REPLACEME/gtk-2.0/gtkrc gmusicbrowser</code>, where REPLACEME is the path to the theme. (system-wide theme are usualy in /usr/share/themes/, user installed theme in ~/.themes/).<br>
+<dd>	You can create a custom layout (see <a href="layout_doc.html">the documentation</a> and <a href="contrib.html">some contributed layouts</a>). You can also use a gtk theme different from the rest of your system by launching gmusicbrowser like that :<code>GTK2_RC_FILES=REPLACEME/gtk-2.0/gtkrc gmusicbrowser</code>, where REPLACEME is the path to the theme. (system-wide theme are usually in /usr/share/themes/, user installed theme in ~/.themes/), see  <a href="https://wiki.gmusicbrowser.org/customization/themes">this wiki page</a> for more details.<br>
 Some parts of gmusicbrowser can also be skinned, see <a href="https://wiki.gmusicbrowser.org/doku.php?id=customization:skins">this page</a> for some documentation.
 </dd>
 <dt><b>How can I customize the SongTree widget ?</b></dt>
