--- a/devel.html
+++ b/devel.html
@@ -42,6 +42,8 @@ Future development versions will be announced on the mailing-list <a href="http:
 <br>
 <h4>New gtk3 beta : <a href="download/gmusicbrowser-1.1.99.1.tar.gz">gmusicbrowser-1.1.99.1.tar.gz</a> (released on 19-11-2020)</h4>
 <a href="download/gmusicbrowser_1.1.99.1_all.deb">gtk3 beta for debian/ubuntu</a><br>
+Note that in v1.1.99.1 the icons play, previous and next and invisible unless you select an icon theme, sorry about that.
+<br>
 
 <br>
 Probably outdated links:<br>
