--- a/download.html
+++ b/download.html
@@ -23,6 +23,8 @@
 </div>
 
 <div id="content">
+	<h4>Latest beta version (uses gtk3 instead of gtk2) : <b><a href="devel.html">1.1.99.1</a></b> (released on 19-11-2020)</h4>
+	<br>
 	<h4>Latest stable version : <b>1.1.16</b> (released on 18-11-2020) <small><i>(<a href="release-notes.txt">release notes</a>)</i></small></h4>
 <!--	<small><i>(You can also check the <a href="devel.html">development version</a> for a more recent version)</i></small><br>
 -->
