--- a/index.html
+++ b/index.html
@@ -151,6 +151,9 @@ Or use these affiliate links when shopping at amazon (to buy music or anything e
 <a target="_blank" href="https://www.amazon.com/b?_encoding=UTF8&tag=gmusicbrowser-20&linkCode=ur2&linkId=d6b6ad03a36b1428da7f40572cb298f3&camp=1789&creative=9325&node=324381011">Amazon US store</a><img src="//ir-na.amazon-adsystem.com/e/ir?t=gmusicbrowser-20&l=ur2&o=1" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /><br>
 <a target="_blank" href="https://www.amazon.fr/b?_encoding=UTF8&tag=gmusicbrowser-21&linkCode=ur2&linkId=0a6377c3c97f6406e9354d4252be7ab8&camp=1642&creative=6746&node=206442031">Amazon French store</a><img src="//ir-fr.amazon-adsystem.com/e/ir?t=gmusicbrowser-21&l=ur2&o=8" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /><br>
 <br>
+<br>
+If you would rather send me money by bank transfer, you can ask me my IBAN by email.
+<br>
 
 <div id=tagline>Keep your music free, don't buy <a href="http://en.wikipedia.org/wiki/Digital_Rights_Management">DRM</a>'ed music.</div>
 
